# HomeWork

./: Cargo.toml
src/: conditions.rs  functions.rs  strings.rs
